button spacing fix

--- a/pages/style.css
+++ b/pages/style.css
@@ -776,10 +776,7 @@ table td {
     position: relative;
     border-right: var(--border-color) solid 2px;
     border-bottom: var(--border-color) solid 2px;
-    padding-top: calc(var(--universal-padding)/2);
-    padding-bottom: calc(var(--universal-padding)/2);
-    padding-left: var(--universal-padding);
-    padding-right: var(--universal-padding);
+    padding: var(--universal-padding);
 }
 
 th:hover {
